--- a/index.html
+++ b/index.html
@@ -136,8 +136,10 @@
           design projects. I'm currently growing into a Full-Stack Developer with skills in HTML, CSS, JavaScript, PHP,
           Python, Django, and WordPress. I love solving real-world problems through code and building user-friendly web
           interfaces.</p>
-          <a href="https://github.com/rahulprajapati34/RahulPrajapati/raw/main/CV_2025042608443132.pdf" download class="cta"><button >Download
-            CV</button></a>
+         <a href="https://rahulprajapati34.github.io/RahulPrajapati/CV_RahulPrajapati.pdf" download class="cta">
+  <button>Download CV</button>
+</a>
+
       </div>
     </div>
   </section>
